[gd_scene load_steps=3 format=3 uid="uid://di0tjr2md6dqn"]

[ext_resource type="Script" uid="uid://nrknymxhny2u" path="res://addons/shipthis/ShipThisPanel.gd" id="1_panel"]
[ext_resource type="PackedScene" path="res://addons/shipthis/components/LogOutput.tscn" id="2_log_output"]

[node name="ShipThisPanel" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_panel")

[node name="EmailContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="EmailContainer"]
layout_mode = 2
text = "Enter your email to get started"

[node name="EmailInput" type="LineEdit" parent="EmailContainer"]
layout_mode = 2
placeholder_text = "your@email.com"

[node name="SendCodeButton" type="Button" parent="EmailContainer"]
layout_mode = 2
text = "Send Code"

[node name="CodeContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="CodeContainer"]
layout_mode = 2
text = "Check your email for the code"

[node name="CodeInput" type="LineEdit" parent="CodeContainer"]
layout_mode = 2
placeholder_text = "Enter code"

[node name="VerifyButton" type="Button" parent="CodeContainer"]
layout_mode = 2
text = "Verify"

[node name="BackButton" type="Button" parent="CodeContainer"]
layout_mode = 2
text = "Use different email"

[node name="AuthenticatedContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="WelcomeLabel" type="Label" parent="AuthenticatedContainer"]
layout_mode = 2
text = "ShipThis - Ready!"

[node name="ActionsContainer" type="HBoxContainer" parent="AuthenticatedContainer"]
layout_mode = 2

[node name="ShipButton" type="Button" parent="AuthenticatedContainer/ActionsContainer"]
layout_mode = 2
text = "Ship"

[node name="ConfigureAndroidButton" type="Button" parent="AuthenticatedContainer/ActionsContainer"]
layout_mode = 2
text = "Configure Android"

[node name="ConnectionStatus" type="Label" parent="AuthenticatedContainer/ActionsContainer"]
visible = false
layout_mode = 2
text = ""

[node name="LogOutput" parent="AuthenticatedContainer" instance=ExtResource("2_log_output")]

[node name="CopyOutputButton" type="Button" parent="AuthenticatedContainer"]
layout_mode = 2
text = "Copy to Clipboard"

[node name="WizardContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="StatusLabel" type="Label" parent="."]
visible = false
layout_mode = 2
